# nDB

./: .gitignore  AGENTS.md  Cargo.toml  README.md  database_evolution_plan.md  dev_plan_ndb_bucket_migration.md
benches/: bench_insert.rs  bench_recovery.rs  bench_search.rs
docs/: README.md  database_evolution_plan_v1.2.md  handover-phase3-to-phase4.md  handover-phase5-to-phase6.md  integration-guide.md  nodejs-integration.md.old  scope-and-boundaries.md  test-documentation.md  user-guide.md
docs/adr/: 001-lsm-lite-storage.md  002-hnsw-index.md  003-simd-distance.md
docs/archive/: development-plan.md  handover-phase1b.md  handover-phase2-to-phase3.md  handover-phase2.md  handover-phase4-to-phase5.md  phase1b-summary.md
docs/integrations/: README.md  grpc.md  napi.md  wasm.md
documentation/: architecture.md  file-buckets.md  nodejs-api.md  query-language.md  rust-api.md
examples/: README.md  basic_usage.rs  rag_system.rs  web_service.rs
napi/: Cargo.toml  GIT-SUBMODULE.md  README.md  index.d.ts  index.js  index.win32-x64-msvc.node  ndb-node.win32-x64-msvc.node  package-lock.json  package.json  setup.js
src/: bucket.rs  compaction.rs  distance.rs  error.rs  filter.rs  hnsw.rs  id.rs  lib.rs  lock.rs  manifest.rs  memtable.rs  search.rs  segment.rs  storage.rs  wal.rs
tests/: phase1_core_tests.rs  phase1a_locking_tests.rs  phase1a_segment_tests.rs  phase2_advanced_tests.rs  phase2_search_tests.rs  phase3_bucket_tests.rs  phase3_hnsw_tests.rs  phase4_filter_tests.rs  phase4_query_tests.rs  phase5_compaction_tests.rs  phase6_production_tests.rs
(+2 files in other folders)
