[workspace]
members = [".", "napi"]
resolver = "2"

[package]
name = "ndb"
version = "0.1.0"
edition = "2021"
authors = ["ndb Contributors"]
description = "Human-readable document database for the AI age"
license = "MIT OR Apache-2.0"
repository = "https://github.com/herrbasan/nDB"
keywords = ["document", "database", "json", "embedded"]
categories = ["database", "data-structures"]
rust-version = "1.75"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
parking_lot = "0.12"
fastrand = "2.0"
thiserror = "1.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.9"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.bench]
debug = true
